Implemented CRUD endpoints for trecipe data. Updated api.yaml to autovalidate request and response bodies using express-openapi-validator package
