# packages/server/server/api/trecipe/trecipe.interface.ts
@@ -1,0 +1,15 @@
+interface DestWithStatus {
+    destUuid: string;
+    completed: boolean;
+}
+
+export default interface Trecipe {
+    uuid: string;
+    name: string;
+    description: string;
+    owner: string;
+    isPrivate: boolean;
+    collaborators: Array<string>;
+    image: string;
+    destinations: Array<DestWithStatus>;
+}
